nat_gateway.tf
resource "aws_eip" "nat_eip" {
 
  tags = {
    Name = "nat-eip"
  }
}


resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat_eip.id
  subnet_id     = aws_subnet.public[0].id
  tags = { Name = "nat-gateway" }
}
